# financeops

./: .env.example  .gitattributes  .gitignore  .semgrep.yml  1. finos.txt  2. finos prompt engine overview.txt  3. finos Deterministic Finance Platform.txt  DEPENDENCY_MATRIX.md  KNOWN_ISSUES.md  _audit_ge300.md  _audit_ge300.tsv  comprehensive_fix_plan.md  docker-compose.prod.yml  final todo lists.md  financeops_corrected_backend_stabilization_plan.md  frontend_backend_coverage.json  payment_flow_audit_report.md  race_condition_test_results.json  railway.beat.toml  railway.env.production  railway.toml  railway.worker.toml  render.yaml  sampled_audit_report.md  test_race_condition.py  tmp_0058_phase_engine3_phase4_erp_execution_numbered.txt  tmp_0059_phase_engine3_phase4b_connector_sync_numbered.txt  tmp_base_numbered.txt  tmp_db_numbered.txt  tmp_engine3_erp_auth_handlers_numbered.txt  tmp_engine3_erp_handlers_numbered.txt  tmp_engine3_erp_sync_handlers_numbered.txt  tmp_engine3_routes_numbered.txt  tmp_engine3_schema_numbered.txt  tmp_erp_auth_service_numbered.txt  tmp_erp_posting_orchestrator_numbered.txt  tmp_erp_posting_packet_builder_numbered.txt  tmp_qbo_auth_numbered.txt  tmp_qbo_online_numbered.txt  tmp_test_engine3_phase4c_quickbooks_numbered.txt  (+3 more)
backend/: .env.example  .phase2_check2.out  DEPLOYMENT_CHECKLIST.md  Dockerfile  Dockerfile.beat  Dockerfile.worker  INCIDENT_RESPONSE_GUIDE.md  MIGRATION_SAFETY.md  OBSERVABILITY_NOTES.md  OPERATIONS_RUNBOOK.md  PERFORMANCE_NOTES.md  SECURITY_HARDENING_NOTES.md  alembic.ini  audit_test_results.txt  celerybeat-schedule  final_verification_v4_0_1.txt  full_backend_pytest_after_backend_start.txt  full_backend_pytest_after_registry_coa_rls_fix.txt  full_backend_pytest_after_windows_temp_fix.txt  full_failures.txt  full_failures_v2.txt  full_failures_v3.txt  full_failures_v4.txt  full_failures_v5.txt  full_suite_after_fixA.txt  full_suite_output.txt  post_fix_results.txt  pyproject.toml  pytest_durations_analysis.txt  route_inventory.json  sprint1_test_results.txt  sprint2_backend_final.txt  sprint2_blockers_final_pytest.txt  sprint2_blockers_final_pytest_q.txt  sprint4_build.txt  sprint4_e2e.txt  sprint4_results.txt  sprint4_warnings_scan.txt  tmp_route_audit.tsv  tmp_route_audit_grouped.tsv  (+5 more)
backend/audit_outputs/: alembic_check.txt  alembic_heads.txt  alembic_history_head120.txt  all_routes_scan.txt  append_rls_tables.txt  ast_routes_count.txt  blueprint_module_matrix.json  check1_float_violations.txt  check2_numeric_models.txt  check3_windows_eventloop.txt  check4_asyncio_loop_scope.txt  check5_append_only_coverage.txt  check6_rls_migrations.txt  check7_filterwarnings.txt  module_inventory.json  module_mapping_report.txt  module_routes_list.txt  module_routes_report.txt  module_summary_lines.txt  module_test_rollup.json  routes_without_auth_scan.txt  security_keyword_scan.txt  test_file_status.json
backend/docs/: deployment-runbook.md
backend/docs/ledgers/: PROMPTS_LEDGER.md
backend/financeops/: __init__.py  config.py  main.py
backend/financeops/accounting_policy_engine/: __init__.py  models.py  policy_rules.py  policy_service.py
backend/financeops/api/: __init__.py  deps.py
backend/financeops/core/: __init__.py  auth.py  exceptions.py  middleware.py  migration_checker.py  security.py
backend/financeops/data_quality_engine/: __init__.py  rules.py  validation_service.py
backend/financeops/db/: __init__.py  append_only.py  base.py  rls.py  session.py  transaction.py
backend/financeops/llm/: cache.py  circuit_breaker.py  cost_ledger.py  fallback.py  gateway.py  pii_masker.py  pii_patterns.py  pipeline.py  prompt_store.py  provider_registry.py  retry.py  streaming.py  token_manager.py
backend/financeops/middleware/: __init__.py  audit_middleware.py
backend/financeops/migrations/: run.py
backend/financeops/observability/: __init__.py  ai_metrics.py  beta_monitoring.py  business_metrics.py  celery_monitor.py  celery_propagation.py  context.py  events.py  logger.py  logging.py  middleware.py  propagation.py  sentry.py  tracing.py  workflow_signals.py
backend/financeops/platform/: __init__.py
backend/financeops/prompt_engine/: __init__.py  cli.py  dependency_graph.py  execution_transaction.py  executor.py  ledger_updater.py  prompt_governance.py  prompt_loader.py  prompt_runner.py  review_gate.py  rework_engine.py  validation.py
backend/financeops/schemas/: __init__.py  accounting_common.py  consolidation.py  fixed_assets.py  fx_rates.py  lease.py  prepaid.py  revenue.py
backend/financeops/security/: __init__.py  antivirus.py  file_validation.py  prompt_injection.py
backend/financeops/seed/: __init__.py  coa.py  platform_owner.py
backend/financeops/services/: __init__.py  audit_service.py  audit_writer.py  auditor_service.py  auth_service.py  bank_recon_service.py  credit_service.py  (+9 more)
backend/migrations/: env.py
backend/scripts/: entrypoint.sh  postdeploy_smoke_check.py  predeploy_migration_check.py  profile_phase_2_2.py  run_migrations.py  run_migrations.sh  smoke_pdf.py  start.sh  validate_env.py
backend/tests/: __init__.py  conftest.py  test_ai_cache.py  test_ai_cost_ledger.py  test_airlock_clamav.py  test_auditor_portal.py  test_auth_onboarding_flows.py  test_auth_rate_limiting.py  test_auto_trigger_pipeline.py  test_backup_dr.py  test_bank_parsers.py  test_board_pack_export_support.py  test_budgeting.py  test_cash_flow_forecast.py  test_chain_hash_concurrency.py  test_ci_hardening.py  test_closing_checklist.py  test_coa.py  test_coa_upload.py  test_config_validation.py  test_debt_covenants.py  test_digital_signoff.py  test_display_scale.py  test_entity_isolation.py  test_error_response_safety.py  test_expense_management.py  test_fdd.py  test_fixed_assets.py  test_float_elimination.py  test_forecasting.py  test_gdpr_erasure.py  test_gdpr_operational.py  test_gstin_utils.py  test_health_endpoints.py  test_invoice_classifier.py  test_iso27001_controls.py  test_layer6_security.py  test_learning_engine.py  test_llm_gateway_state.py  test_locations.py  (+40 more)
backend/tmp/: unbounded_queries.txt
(+2971 files in other folders)
