[project]
name = "financeops-backend"
version = "1.1.0"
requires-python = ">=3.11,<3.13"
dependencies = [
    # Web Framework
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.0",
    "gunicorn==22.0.0",
    "python-multipart==0.0.9",  # NOTE: CVE-2024-53981 fix requires >=0.0.18 but incompatible with starlette 0.38.6 — needs coordinated FastAPI/starlette/multipart upgrade
    # Database
    "sqlalchemy==2.0.35",
    "asyncpg==0.30.0",
    "psycopg2-binary==2.9.10",
    "alembic==1.13.0",
    "pgvector==0.3.3",
    # Cache & Queues
    "redis==5.0.8",
    "celery[redis]==5.4.0",
    "flower==2.0.1",
    # Validation
    "pydantic==2.9.0",
    "pydantic-settings==2.5.0",
    "email-validator==2.2.0",
    # Auth & Security
    "python-jose[cryptography]==3.4.0",
    "passlib[bcrypt]==1.7.4",
    "pyotp==2.9.0",
    "cryptography==43.0.1",
    "certifi==2026.2.25",
    "slowapi==0.1.9",
    "starlette-csrf==3.0.0",
    # File Processing
    "weasyprint>=61.0",
    "openpyxl==3.1.5",
    "jinja2==3.1.6",
    "xlsxwriter==3.2.0",
    "pandas==2.2.3",
    "numpy==2.1.0",
    "python-magic==0.4.27",
    "python-docx==1.1.2",
    "clamd==1.0.2",
    # Storage
    "boto3==1.35.0",
    # HTTP
    "httpx==0.27.0",
    "aiohttp==3.10.0",
    "aiosmtplib==3.0.2",
    "stripe==11.6.0",
    "razorpay==1.4.2",
    # AI / LLM
    "anthropic==0.34.0",
    "openai==1.51.0",
    "ollama==0.3.3",
    "tiktoken==0.7.0",
    # Telemetry
    "opentelemetry-sdk==1.27.0",
    "opentelemetry-api==1.27.0",
    "opentelemetry-exporter-otlp==1.27.0",
    "opentelemetry-instrumentation-fastapi==0.48b0",
    "opentelemetry-instrumentation-sqlalchemy==0.48b0",
    "opentelemetry-instrumentation-redis==0.48b0",
    "opentelemetry-instrumentation-celery==0.48b0",
    "sentry-sdk[fastapi]==2.14.0",
    "python-json-logger==2.0.7",
    "prometheus-client==0.21.0",
    "temporalio==1.7.0",
    # Utilities
    "python-dateutil==2.9.0",
    "pytz==2024.2",
    "babel==2.16.0",
    "filelock==3.19.1",
    "setuptools==80.9.0",
    "croniter>=6.2.2",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.0",
    "pytest-asyncio==1.1.1",
    "pytest-cov==5.0.0",
    "pytest-xdist==3.6.1",
    "httpx==0.27.0",
    "respx==0.22.0",
    "faker==30.0.0",
    "factory-boy==3.3.1",
    "ruff==0.6.0",
    "mypy==1.11.0",
]

[project.scripts]
finos-engine = "financeops.prompt_engine.cli:main"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
addopts = "--strict-markers"
filterwarnings = [
    "error",
    # pytest plugin assert-rewrite noise for dynamically imported helper plugins
    "ignore::_pytest.warning_types.PytestAssertRewriteWarning:_pytest\\.config",
    # known SQLAlchemy identity-map conflict warnings in supersession negative-path tests
    "ignore:New instance <MisTemplateVersion .* conflicts with persistent instance <MisTemplateVersion .*:sqlalchemy.exc.SAWarning",
    "ignore:New instance <NormalizationSourceVersion .* conflicts with persistent instance <NormalizationSourceVersion .*:sqlalchemy.exc.SAWarning",
    # third-party anyio stream finalizer noise emitted as PytestUnraisableExceptionWarning
    "ignore:.*MemoryObjectReceiveStream.*:pytest.PytestUnraisableExceptionWarning",
    # razorpay SDK uses deprecated pkg_resources API
    "ignore:pkg_resources is deprecated.*:UserWarning",
]
testpaths = ["tests"]
markers = [
    "unit: unit-level tests",
    "integration: integration tests",
    "slow: slower-running tests",
    "db_heavy: tests that apply DDL or heavy database state setup",
    "migration_heavy: tests that exercise migration or temp-database bootstrap paths",
    "serial_only: tests that must run with -n 1 for stable lock usage",
    "committed_session: async_session fixture uses committed (non-rollback) session for tests that need data visible across connections",
]


[tool.setuptools.packages.find]
include = ["financeops*"]
exclude = ["migrations*"]
